--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "bootstrap": "^4.5.2",
-    "parcel-bundler": "^1.12.4",
+    "@babel/polyfill": "^7.11.5",
+    "@material-ui/core": "^4.11.0",
+    "babel-runtime": "^6.26.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1"
   },
   "scripts": {
@@ -19,6 +18,19 @@
     "build": "parcel build src/index.html"
   },
   "devDependencies": {
-    "sass": "^1.26.10"
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "autoprefixer": "^9.8.6",
+    "parcel-bundler": "^1.12.4",
+    "postcss-cli": "^7.1.2"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/transform-runtime"
+    ]
   }
 }
